# scion-ip-translator

./: .gitmodules  LICENSE  README.md
bootstrap-server/: README.md  bootstrap-server.py
design/: scion-ip-translation.md
ebpf-prototype/: .gitignore  CMakeLists.txt  README.md
ebpf-prototype/bpf/: common.h  egress.bpf.c  ingress.bpf.c  scion.h  scion_types.h
ebpf-prototype/evaluation/: README.md  bwtest.py  iperf.sh  results.py
ebpf-prototype/evaluation/setup/: local-testbed-namespaces.md  testbed-setup-namespaces.md  testbed-setup.md
ebpf-prototype/include/: EgressLoader.hxx  IngressLoader.hxx  PathService.hxx
ebpf-prototype/src/: CMakeLists.txt  EgressLoader.cxx  IngressLoader.cxx  PathService.cxx  main.cxx
ebpf-prototype/vmlinux/: vmlinux.h
prototype/: README.md  built_grpc.sh  daemon.py  daemon_client.py  requirements.txt  scitun.py
prototype/demo/: index.html
prototype/proto/daemon/v1/: daemon_pb2.py  daemon_pb2.pyi  daemon_pb2_grpc.py
prototype/proto/drkey/v1/: drkey_pb2.py  drkey_pb2.pyi
prototype/topology/: setup.py  tiny.topo
scion2ip/: README.md  ip2scion  scion2ip
vpp/vpp-path-manager/: CMakeLists.txt  config.toml
vpp/vpp-path-manager/bpf/: CMakeLists.txt  Makefile  af_xdp.c
vpp/vpp-path-manager/scion/include/scion/addr/: isd_asn.hpp
vpp/vpp-path-manager/src/: config.cpp  config.hpp  dataplane.cpp  dataplane.hpp  ebpf.cpp  ebpf.hpp  errors.hpp  main.cpp  netlink.cpp  netlink.hpp
